--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ footer{
 .footer-content {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100vw;
 }
 .footer-text,
@@ -355,6 +355,7 @@ footer{
   }
   .footer-content {
     flex-direction: column;
+    align-items: center;
   }
   .footer-text,
   .footer-links,
